# cassie-mujoco-sim

./: .clangd  .env  .gitignore  CMakeLists.txt  Makefile  README.md  setup.py
cmake/: Targets.cmake
example/: CMakeLists.txt  Makefile  cassiemujoco_ctypes.py  cassiesim.c  cassietest.c  test_terrain.c
include/: cassie_mujoco_sim.h  cassiemujoco.h
include/cassiemujoco/: cassiemujoco.h  cassiemujoco_cpp.h  udp_cpp.h
lib/sim/: CMakeLists.txt  cassie.cpp  cassie.h  mujoco_context.cpp  renderer.cpp  simulation.cpp  udp.cpp
python/: CMakeLists.txt  cassie_mujoco_sim.cpp  make_sdist.sh  pyproject.toml  setup.cfg  setup.py  test_sim.py
python/cassiemujoco/: CMakeLists.txt
python/src/cassie_mujoco_sim/: cassiemujoco.py  env.py
python/test/: test_cassie_udp.py  test_visualization.py
python/tests/: test_sim.py
src/: CMakeLists.txt  cassiemujoco.c  internal.h
test/: CMakeLists.txt  cassietest.c  test_hfield.c  test_initialization.cpp  test_renderer.cpp
tools/: CMakeLists.txt  cassie_sim.cpp  cassiectrl.c  cassiesim.c
