[metadata]
name = cassie_mujoco_sim
description = Cassie mujoco simulator
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = False
packages = find:
package_dir =
    =src
python_requires = >=3.6
install_requires =
    # This requirement is only necessary if the build_extension_env
    # context manager is used in the top-level __init__.py
    cmake-build-extension

[options.packages.find]
where = src

[options.package_data]
cassie_mujoco_sim = 
    *.xml
    *.stl
    *.png
    *.bin

[options.extras_require]
test =
    pytest
    pytest-icdiff
all =
    %(test)s

# This also requires using the "expose_binaries" option in setup.py.
# It creates a generic <package>.bin.__main__ file that is exposed
# as <env>/bin/<executable_name> that relays all input arguments to
# the C++ executable.

[tool:pytest]
addopts = -rsxX -v
testpaths = tests